--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="rota.js"></script>
 </head>
 <body>
-    teste
+    <form action="/inserir" method="get">
+        <input type="text" name="nome" placeholder="coloque seu nome">
+        <button type="submit">Inserir</button>
+    </form>
 </body>
 </html>
