--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="../rota.js"></script>
 </head>
 <body>
-    <h1>Home</h1>
+    <form action="/inserir" method="get" id="meuFormulario">
+        <input type="text" name="nome" placeholder="coloque seu nome">
+        <input type="text" name="email" placeholder="seu e-mail">
+        <button type="submit">Inserir</button>
+    </form>
 </body>
 </html>
