--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="rota.js"></script>
 </head>
 <body>
-    <form action="/inserir" method="get">
+    <form action="/inserir" method="post">
         <input type="text" name="nome" placeholder="coloque seu nome">
         <button type="submit">Inserir</button>
     </form>
